--- a/src/main.css
+++ b/src/main.css
@@ -12,7 +12,7 @@
 .card {
   padding: 1em;
   margin: 1em;
-  max-width: 19rem;
+  width: 20rem;
   height: 25rem;
   color: white;
   font-size: 1.6em;
