--- a/src/main.css
+++ b/src/main.css
@@ -22,6 +22,7 @@
   font-family: sans-serif;
   font-weight: bold;
   border-radius: 1rem;
+  box-shadow: 1px 3px 6px rgba(0, 0, 0, 0.4);
 }
 
 .card--good {
