--- a/src/main.css
+++ b/src/main.css
@@ -20,6 +20,7 @@ body {
   width: 25rem;
   height: 32rem;
   margin-bottom: 1rem; /* address bottom: -1rem on counter */
+  overflow: hidden;
 }
 
 .card-slot__counter {
@@ -47,6 +48,8 @@ body {
   font-weight: bold;
   border-radius: 1rem;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.5);
+  transform: translateY(0);
+  transition: translate 500ms;
 }
 
 .card--good {
@@ -59,6 +62,30 @@ body {
 
 .card--improvement {
   background: var(--color-bg-improvement);
+}
+
+.card--enter-start {
+  transform: translateY(100%);
+}
+
+.card--enter-end {
+  transform: translateY(0);
+}
+
+.card--enter {
+  transition: all 300ms;
+}
+
+.card--leave-start {
+  transform: translateY(0);
+}
+
+.card--leave-end {
+  transform: translateY(100%);
+}
+
+.card--leave {
+  transition: all 200ms;
 }
 
 nav {
