--- a/src/main.css
+++ b/src/main.css
@@ -39,17 +39,26 @@ body {
 }
 
 .card {
-  padding: 1em;
+  padding: 2em;
   height: 100%;
   width: 100%;
   color: white;
-  font-size: 2.2em;
-  line-height: 1.3em;
-  font-weight: bold;
   border-radius: 1rem;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.5);
   transform: translateY(0);
   transition: translate 500ms;
+}
+
+.card__question {
+  font-size: 2.2em;
+  line-height: 1.3em;
+  font-weight: bold;
+}
+
+.card__rules {
+  margin-top: 2em;
+  padding: 0;
+  list-style-position: inside;
 }
 
 .card--good {
@@ -62,6 +71,10 @@ body {
 
 .card--improvement {
   background: var(--color-bg-improvement);
+}
+
+.card--intro {
+  background: black;
 }
 
 .card--enter-start {
