--- a/src/main.css
+++ b/src/main.css
@@ -50,6 +50,7 @@ main {
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.5);
   transform: translateY(0);
   transition: translate 500ms;
+  border: 2px solid #222;
 }
 
 .card__question {
